# SE-Project-416-GD

./: Database.sql  Login.sql  Readme.md
IMS/: employee_preload.py  inventory_preload.py  pyproject.toml
IMS/.migrations/versions/: 26eee869b23d_.py  c944bd4c05b6_.py  f1fe56f23494_.py
IMS/.migrations_old/versions/: 55a07598a74a_.py
IMS/IMS/: .IMS.db  .OLD_.__init__.py  .OLD_forms.py  .OLD_routes.py  IMS.db  __init__.py  config.py  errors.py  forms.py  models.py  routes.py
IMS/IMS/auth/: __init__.py  forms.py  routes.py
IMS/IMS/errors/: __init__.py  handlers.py
IMS/IMS/inventory/: __init__.py  forms.py  routes.py
IMS/IMS/main/: __init__.py  routes.py
IMS/IMS/management/: __init__.py  forms.py  routes.py
IMS/IMS/static/: .style.css.kate-swp  UI.css  addTable.css  login.css  plots.toml  style.css
IMS/IMS/static/jsFile/: inventory.js  main.js  manager_employee.js  manager_product.js
IMS/IMS/templates/: .addproduct.html.REMOVE  base.html  index.html  inventory.html
IMS/IMS/templates/auth/: ID.html  login.html  password.html  register.html
IMS/IMS/templates/errors/: 500.html
IMS/IMS/templates/inventory/: active_order.html  index.html  (+4 more)
IMS/migrations/versions/: 09d59bc67d54_.py  2e93acf35f30_.py  2fe8886b14b9_.py  329d2e693814_users_table.py  3df1c67568b0_.py  47a62c98cad6_.py  62ea26bf0188_.py  71ecc5bb40bc_.py  9832b4b94108_.py  a08255f1e005_.py  ac0abbb04f3d_.py  dde4d368b199_.py
IMS/tests/: .test_index.py  DEBUGLIST.txt  GizmosDoodadsTEST.csv  conftest.py
IMS/tests/unit/: test_employee_info.py  test_inventory.py  test_login.py  test_models.py
(+69 files in other folders)
